*SVN*

* Fix padding on long machine names [Michael Schoen]

* Fix matching of machine names [Michael Schoen]

* Fix matching of load averages [Michael Schoen]


*1.0.1* (March 6, 2006)

* Rename capistrano-ext

* Put request monitor script in user's home directory, instead of /tmp, to accomodate multiple users